--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Weather Dashboard</title>
 </head>
 
@@ -42,11 +42,11 @@
 
         </div>
     <!-- 5 day weather forecast-->
-        <div class="week-forcast">
+        <div id="week-forecast" class="card-title">
             <h2 id="week-forecast-h2">
 
         </div>
     </main>
-<script src="./assets/js/script.js"></script>
+<script src="homepage.js"></script>
 </body>
 </html>
